[gd_scene load_steps=4 format=2]

[ext_resource path="res://Images/TinyStar.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Star.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 4.09218

[node name="Star" type="RigidBody2D" groups=[
"bg_star",
]]
collision_layer = 1024
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
